Fixed alignment for .offer and .price

--- a/src/scss/parts/header/_header.scss
+++ b/src/scss/parts/header/_header.scss
@@ -5,7 +5,7 @@
 
 .header {
   height: auto;
-  background: url('../../src/assets/background.jpg') no-repeat center center fixed;
+  background: url('../.././assets/background.jpg') no-repeat center center fixed;
   background-color: rgba( $black, .3);
   background-blend-mode: color;
   background-size: cover;
