--- a/src/scss/parts/header/_price.scss
+++ b/src/scss/parts/header/_price.scss
@@ -1,6 +1,7 @@
 .price {
   width: 50%;
   display: flex;
+  padding-left: 5em;
 
   &__currency {
     color: $white;
